--- a/demo2/src/main/resources/application.properties
+++ b/demo2/src/main/resources/application.properties
@@ -1,10 +1,17 @@
 spring.application.name=demo2
 server.port=8083
 
-spring.datasource.url=jdbc:mysql://localhost:3306/healthy_meal?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=maral05
+#spring.datasource.url=jdbc:mysql://localhost:3306/healthy_meal?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
+#spring.datasource.username=root
+#spring.datasource.password=maral05
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+spring.datasource.url=jdbc:mysql://mysqlhealthymeal-healthymeal.l.aivencloud.com:22214/defaultdb?sslMode=REQUIRED&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_tQKGLWmGz6iUcGRQk3Q
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
